...
  version: 3,
  isArchived: false,
  hasBeenUsed: true,
  entries: [
    BundleEntry(
      kind: BundleEntryKind.domain,
      value: '*.geogebra.org',
      matchType: BundleEntryMatchType.wildcard,
    ),
    BundleEntry(
      kind: BundleEntryKind.domain,
      value: 'wikipedia.org',
      matchType: BundleEntryMatchType.suffix,
...
